8201240: Improve releasing native resources of BufImgSurfaceData.ICMColorData

Reviewed-by: prr, serb